--- a/css/base.em.zen.css
+++ b/css/base.em.zen.css
@@ -1,10 +1,10 @@
 /*
-* Skeleton V1.2
-* Copyright 2011, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 6/20/2012
+* Blank V1
+* 
+* 
+* 
+* 
+* 
 */
 
 
@@ -145,53 +145,77 @@
 		
 		
 /* #Chrome Frame Alert
-================================================== 	
+================================================== 	*/
 	.chromeframe {
 		margin: 0.2em 0;
 		background: #ccc;
 		color: #000;
 		padding: 0.2em 0;
-	}*/	
+	}
+	
+	
 
+/* #Body
+================================================== 	*/
 
-body {
-  margin: 0;
-  /*background: #fff url(../img/misc/baseline-20px.gif) repeat;*/
-  font: 200% "Georgia", "Times New Roman", serif;
-  line-height: 1.5em;
-  color: #444;
+	html, body {
+		height: 100%;
+		width: 100%;
+		/* 
+		-webkit-text-size-adjust: 100%;
+	    -ms-text-size-adjust: 100%;	
+		*/
+	}
+	
+
+	body {
+	  margin: 0;
+	  /*background: #fff url(../img/misc/baseline-20px.gif) repeat;*/
+	  font: 200% "Helvetica", Helvetica, Arial, sans-serif;
+	  line-height: 1.5em;
+	  color: #444;
+	  
+	  /* Never use
+	  -webkit-font-smoothing: antialiased; (none or subpixel)
+	  sub pixel loks great on mac, crap on pc
+	  vice versa for anti aliased
+	   http://www.usabilitypost.com/2012/11/05/stop-fixing-font-smoothing/ */
+	  
+	  /* Fix for webkit rendering 
+	  -webkit-text-size-adjust: 100%;*/
+	  /* Baseline */
+	  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), transparent 2px);
+	  background-origin: content-box;
+	  background-size: 100% 0.75em;}
   
-  /* Never use
-  -webkit-font-smoothing: antialiased; (none or subpixel)
-  sub pixel loks great on mac, crap on pc
-  vice versa for anti aliased
-   http://www.usabilitypost.com/2012/11/05/stop-fixing-font-smoothing/ */
   
-  /* Fix for webkit rendering 
-  -webkit-text-size-adjust: 100%;*/
-  /* Baseline */
-  background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), transparent 2px);
-  background-origin: content-box;
-  background-size: 100% 0.75em; }
-  
-  
+	body.background-image		{ background: #000 url(../img/background-image.jpg) 50% 50%; } 
   
 
 /* #Typography
 ================================================== */
 h1, h2, h3, h4, h5, h6 {
   color: #181818;
-  font-family: "Georgia", "Times New Roman", serif;
+  font-family:  "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal; }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   font-weight: inherit; }
 
 
+	/* old 64px H1
 	h1 {
 		font-size:2em;
 		line-height: 1.125em;
-		margin:0 0 0.75em; }
+		margin:0 0 0.75em;
+		font-weight: bold; }
+		*/
+		
+	h1 {
+		font-size:2.25em;
+		line-height: 1em;
+		margin:0 0 0.6666666666666667em;
+		font-weight: bold; }
 
 	h2 {
 		font-size:1.5em;
@@ -231,6 +255,8 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	em { font-style: italic; }
 	strong { font-weight: bold; color: #333; }
 	small { font-size: 40%; }
+	
+	.text-shadow	{ color: #FFF; text-shadow: 0 2px 2px  rgba(0, 0, 0, 0.6);  } 
 
 /*	Blockquotes  */
 	blockquote, blockquote p { font-size: 17px; line-height: 24px; color: #777; font-style: italic; }
@@ -239,7 +265,22 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	blockquote cite:before { content: "\2014 \0020"; }
 	blockquote cite a, blockquote cite a:visited, blockquote cite a:visited { color: #555; }
 
-	
+
+/* #Images/Video
+================================================== */
+
+	img.scale-with-grid, video {
+		max-width: 100%;
+		height: auto;
+		vertical-align: middle;
+		}
+		
+	img.bg {
+		background-image:url(../img/640X480.png) 50% 50% no-repeat;
+		overflow:hidden;
+		width: 160px;
+		height: 120px;
+		}
 
 
 /* #Links
@@ -247,10 +288,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	a, a:visited { color: #C30; text-decoration: none; outline: 0; }
 	a:hover, a:focus { color: #C30; border-bottom: 1px solid red;  }
 	p a, p a:visited { line-height: inherit; }
+	
 
 
 /* #Lists
 ================================================== */
+
 	ul, ol { margin-bottom: 3em; font-size: 50%;  }
 	ul { list-style: none outside; }
 	ol { list-style: decimal; }
@@ -270,20 +313,6 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	
 	
 
-/* #Images/Video
-================================================== */
-
-	img.scale-with-grid, video {
-		max-width: 100%;
-		height: auto;
-		}
-		
-	img.bg {
-		background-image:url(../img/640X480.png) 50% 50% no-repeat;
-		overflow:hidden;
-		width: 160px;
-		height: 120px;
-		}
 
 
 /* #Buttons
@@ -546,6 +575,25 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	form.nice div.form-field.error .small.oversize + small, form.nice .small.oversize + small.error { width: 136px; }
 	form.nice div.form-field.error .medium.oversize + small, form.nice .medium.oversize + small.error { width: 256px; }
 	form.nice div.form-field.error .large.oversize + small, form.nice .large.oversize + small.error { width: 436px; }
+	
+	
+	/* Just Line
+	----------------------------------------- */
+	
+	.line {
+	  display: block;
+	  border: none;
+	  color: #333;
+	  background: transparent;
+	  border-bottom: 1px dotted black;
+	  padding: 5px 2px 0 2px;
+	}
+	
+	.line:focus { 
+	  outline: none;
+	  border-color: #51CBEE;
+}
+	
 
 
 
