--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,10 @@
 /*
-* Skeleton V1.2
-* Copyright 2011, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 6/20/2012
+* Blank V1
+* 
+* 
+* 
+* 
+* 
 */
 
 /* Table of Content
@@ -55,6 +55,30 @@
 
 /* #Page Styles
 ================================================== */
+
+	#top-container 	{
+		height: 70%; /* alt --> height:70vh; */
+		min-height: 12.5em;
+		max-height: 25em;
+		width: 100%;
+		min-width: 100%;
+		max-width: 100%;
+		margin: 0 auto;
+		padding: 0;
+		top: 0;
+		background-color:#999;
+		/*
+		background: #000 url(../img/background-image.jpg) 50% 50%;
+		*/ 
+		}
+		
+	.vertical-center {
+		position: relative;
+		top: 35%;
+		
+	}
+		
+		
 
 .cursor-zoom {
   cursor: cursor: -webkit-zoom-in;
@@ -171,234 +195,6 @@ http://net.tutsplus.com/tutorials/html-css-techniques/quick-tip-the-multi-column
     column-gap: 10px;  
 }  
 
-
-
-/* #Mobile Menu
-================================================== */
-
-.block {
-  position: relative;
-  margin: 0 auto;
-  padding: 1.5em 1.5em;
-  max-width: 60em;
-}
-
-
-
-
-.close-btn {
-  display: block;
-  width: 3em;
-  height: 3em;
-  padding: 0;
-  border: 0;
-  outline: none;
-  background: #333333 url("../img/close-btn.svg") left center no-repeat;
-  background-size: 1.875em 1.875em;
-  overflow: hidden;
-  white-space: nowrap;
-  text-indent: 100%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-.no-svg .close-btn {
-  background-image: url("../img/close-btn.png");
-}
-.close-btn:focus, .close-btn:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
-
-
-.nav-btn {
-  display: block;
-  width: 3em;
-  height: 3em;
-  padding: 0;
-  border: 0;
-  outline: none;
-  background: #333333 url("../img/nav-icon.svg") left center no-repeat;
-  background-size: 1.875em 1.5em;
-  overflow: hidden;
-  white-space: nowrap;
-  text-indent: 100%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-  opacity: 0.7;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-.no-svg .nav-btn {
-  background-image: url("../img/nav-icon.png");
-}
-.nav-btn:hover, .nav-btn:focus {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
-
-
-
-#nav {
-  z-index: 200;
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  color: #fff;
-}
-#nav .close-btn {
-  display: none;
-}
-
-
-
-#nav .block {
-  z-index: 2;
-  position: relative;
-  padding: 0.75em 1.25em;
-  background: #333333;
-}
-
-#nav ul {
-  *zoom: 1;
-  display: block;
-}
-#nav ul:before, #nav ul:after {
-  content: "";
-  display: table;
-}
-#nav ul:after {
-  clear: both;
-}
-#nav li {
-  display: block;
-}
-#nav li a {
-  display: block;
-  color: red;
-  font-size: 0.875em;
-  line-height: 1.28571em;
-  outline: none;
-}
-#nav li a:focus, #nav li a:hover {
-  color: #fff;
-  background: rgba(255, 255, 255, 0.1);
-}
-#nav li.is-active a {
-  color: #fff;
-}
-
-
-
-#top {
-  z-index: 100;
-  position: relative;
-  color: #fff;
-  background: #333333;
-}
-#top .block-title {
-  margin: 0;
-  text-align: center;
-  white-space: nowrap;
-}
-#top .nav-btn {
-  position: absolute;
-  top: 1.5em;
-  left: 1.5em;
-}
-
-
-
-@media screen and (min-width: 45.0625em) {
-  #top .nav-btn {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-
-  #nav .close-btn {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-  #nav .block-title {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-  #nav ul {
-    text-align: center;
-    white-space: nowrap;
-  }
-  #nav li {
-    display: inline-block;
-    border-right: 1px solid rgba(255, 255, 255, 0.1);
-  }
-  #nav li:last-child {
-    border-right: none;
-  }
-  #nav li a {
-    padding: 0.42857em 0.85714em;
-  }
-}
-@media screen and (max-width: 45em) {
-  #nav {
-    position: absolute;
-    top: 0;
-    padding-top: 5.25em;
-  }
-  #nav:not(:target) {
-    z-index: 1;
-    height: 0;
-  }
-  #nav:target .close-btn {
-    display: block;
-  }
-  #nav .close-btn {
-    position: absolute;
-    top: -3.75em;
-    left: 1.875em;
-  }
-  #nav .block {
-    position: relative;
-    padding: 0;
-  }
-  #nav li {
-    position: relative;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
-  }
-  #nav li:last-child {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  }
-  #nav li.is-active:after {
-    z-index: 50;
-    display: block;
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -0.03125em;
-    margin-top: -0.625em;
-    border-top: 0.625em transparent solid;
-    border-bottom: 0.625em transparent solid;
-    border-right: 0.625em white solid;
-  }
-  #nav li a {
-    padding: 0.85714em 2.14286em;
-  }
-}
 
 
 /* #Media Queries
